--- a/Yelp Business Index/Storyboards/Base.lproj/Main.storyboard
+++ b/Yelp Business Index/Storyboards/Base.lproj/Main.storyboard
@@ -60,6 +60,21 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="134.59821428571428"/>
         </scene>
+        <!--Business Detail View Controller-->
+        <scene sceneID="hy1-c1-21B">
+            <objects>
+                <viewController storyboardIdentifier="BusinessDetailVC" id="QPQ-oW-hqX" customClass="BusinessDetailViewController" customModule="Yelp_Business_Index" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Q9z-0l-s72">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="G4F-lG-41C"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BXX-al-5Bg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1999" y="135"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="fev-P0-whc">
             <objects>
