--- a/Yelp Business Index/Storyboards/Base.lproj/Main.storyboard
+++ b/Yelp Business Index/Storyboards/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Local Attractions-->
+        <!--Business List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Yelp_Business_Index" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="BusinessViewController" customModule="Yelp_Business_Index" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -37,7 +37,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="mWO-jF-tn2" secondAttribute="bottom" id="xsS-IG-s2e"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Local Attractions" id="VM3-TG-nDZ">
+                    <navigationItem key="navigationItem" title="Business List" id="VM3-TG-nDZ">
                         <barButtonItem key="leftBarButtonItem" title="Sort By" id="Yjs-rb-zXo">
                             <connections>
                                 <action selector="sortByTapped:" destination="BYZ-38-t0r" id="anO-VP-Q5e"/>
